--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,41 @@ body {
 }
 
 html {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 body{
-    color: a9a9a9;
-    font-family: "Inter", sans-serif;
+  background-color: rgb(169, 169, 169);
+  font-family: "Inter", sans-serif;
+}
+
+h1{
+  color: white;
+  font-weight: 340;
+letter-spacing: 2.5px;
+font-size: 60px;
+}
+
+h2{
+  color: white;
+  font-weight: 300;
+}
+
+h3{
+  color: white;
+  font-weight: 300;
 }
 
 body p{
     color: white;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+mark{
+  color: white;
+  background-color: rgb(135, 44, 44);
 }
 
 ::-webkit-scrollbar {
@@ -24,21 +48,27 @@ body p{
 }
 
 a:link {
-    text-decoration: none;
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: whitesmoke;
   }
 
-  a:hover {
-    color: var(--clr-4);
+nav a:visited {
+  color: white;
   }
 
-  mark {
-    background-color: rgb(105, 105, 105);
-    margin: 3px;
-  }
+mark {
+  background-color: rgb(105, 105, 105);
+  padding: 5px;
+}
 
 nav {
-    top: 20%;
-  float: left;
+  top: 0;
+  bottom: 0;
+  float: right;
   position: fixed;
 }
 
@@ -49,4 +79,27 @@ li {
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
   padding: 30px 0px 0px 0px;
+}
+
+.image-panel{
+  width: 27%;
+  float: right;
+}
+
+.image-panel img{
+  float: center;
+}
+
+.header{
+  text-align: right;
+  padding-right: 40px;
+  padding-top: 10%;
+}
+
+.header img{
+  width: 25px;
+}
+
+.main-section{
+  margin: 29%;
 }
