--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,14 @@ body {
   overflow: scroll;
   overflow-x: hidden;
   margin: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 html {
   height: 100%;
   width: 100%;
+  
 }
 
 body{
@@ -35,7 +38,7 @@ h3{
 body p{
     color: white;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 mark{
@@ -102,4 +105,6 @@ li {
 
 .main-section{
   margin: 29%;
+  width: 73%;
+  float: left;
 }
