--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@ font-size: 60px;
 
 h2{
   color: white;
-  font-weight: 300;
+  font-weight: 330;
+  font-size: 45px;
+  letter-spacing: 2px;
 }
 
 h3{
@@ -38,7 +40,7 @@ h3{
 body p{
     color: white;
     font-weight: 300;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 
 mark{
@@ -59,7 +61,7 @@ a:hover {
   color: whitesmoke;
   }
 
-nav a:visited {
+a:visited {
   color: white;
   }
 
@@ -69,10 +71,15 @@ mark {
 }
 
 nav {
-  top: 0;
-  bottom: 0;
-  float: right;
+  top: -15%;
+  right: 4%;
   position: fixed;
+  text-align: right;
+  z-index: 1;
+}
+
+nav img{
+  height: 5%;
 }
 
 li {
@@ -86,6 +93,7 @@ li {
 
 .image-panel{
   width: 27%;
+  padding-left: 5%;
   float: right;
 }
 
@@ -93,18 +101,32 @@ li {
   float: center;
 }
 
-.header{
-  text-align: right;
-  padding-right: 40px;
-  padding-top: 10%;
+.contact {
+  background-color: #333;
+  color: white;
+  padding: 40px 20px;
+  text-align: center;
+  position: relative;
 }
-
-.header img{
-  width: 25px;
+.contact h2 {
+  margin-bottom: 20px;
 }
-
-.main-section{
-  margin: 29%;
-  width: 73%;
-  float: left;
+.contact form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact input, .contact textarea {
+  width: 80%;
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  background-color: #444;
+  color: white;
+}
+.contact button {
+  padding: 10px 20px;
+  background-color: #d2d2d2;
+  color: white;
+  border: none;
 }
