--- a/css/about.css
+++ b/css/about.css
@@ -23,22 +23,15 @@
   /* Float 3 columns side by side */
   .card-column {
     float: left;
-    width: 50%;
+    width: 30%;
+    padding-left: 10%;
   }
   
   /* Remove extra left and right margins, due to padding */
   .card-row {
-    padding-top: 5%;
-    padding-left: 3%;
-    width: 92%;
+    padding: 3% 3% 3% 1%;
+    width: 100%;
     float: left;
-  }
-  
-  /* Clear floats after the columns */
-  .card-row:after {
-    content: "";
-    display: table;
-    clear: both;
   }
   
   /* Clear floats after the columns */
