--- a/css/about.css
+++ b/css/about.css
@@ -23,13 +23,14 @@
   /* Float 3 columns side by side */
   .card-column {
     float: left;
-    width: 30%;
-    padding-left: 10%;
+    width: 38%;
+    padding-left: 5%;
   }
   
   /* Remove extra left and right margins, due to padding */
   .card-row {
-    padding: 3% 3% 3% 1%;
+    padding: 3%;
+    margin: 2;
     width: 100%;
     float: left;
   }
@@ -41,16 +42,34 @@
     clear: both;
   }
   
+/*.card{
+  background-color: rgb(45, 10, 77);
+}*/
+
   /* Style the counter cards */
-  .card {
-    padding: 9%;
+  table {
+    border-collapse: collapse;
+    width: 100%;
   }
-  
-  .card img{
-    width: 86%;
+
+  td {
+    text-align: left;
+    padding: 6px;
+    padding-left: 5%;
+    color: white;
+    font-size: 18px;
+    font-weight: 300;
+  }
+
+  td img{
+    width: 20px;
+    padding-left: 2%;  
   }
 
   .card h2{
     text-align: center;
+    font-size: 35px;
+    font-weight: 400;
+    letter-spacing: 1px;
   }
   
