--- a/css/projects.css
+++ b/css/projects.css
@@ -37,3 +37,23 @@
     .project:hover .image {
       opacity: 0.3;
     }
+
+    .collapsible {
+      cursor: pointer;
+      padding: 18px;
+      width: 100%;
+      border-bottom: #555;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+    }
+    
+    .active, .collapsible:hover {
+      background-color: #555;
+    }
+    
+    .content {
+      padding: 0 18px;
+      display: none;
+      overflow: hidden;
+    }
