--- a/css/projects.css
+++ b/css/projects.css
@@ -1,59 +1,77 @@
 .opener{
-    text-align: right;
-    padding-right: 40px;
-    padding-top: 10%;
-    padding: 10%;
+  text-align: right;
+  padding-right: 40px;
+  padding-top: 10%;
+  padding: 10%;
+}
+
+.opener a{
+  text-decoration: underline;
+}
+
+.left_section{
+  padding-left: 5%;
+  text-align: left;
+  width: 50%;
+}
+
+.left_section img{
+  width: 100%;
+}
+
+.project img {
+  width: 90%;
+}
+
+.project p{
+  font-size: 16px;
+}
+
+.project h3{
+  margin: 1.5% 0 -1.5%;
+}
+
+.project{
+  margin-bottom: 7%;
+}
+
+  /* image hover */
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .project:hover .image {
+    opacity: 0.3;
   }
 
-  .opener a{
-    text-decoration: underline;
+  details {
+    user-select: none;
+    margin: 3%;
   }
-
-  .left_section{
-    padding-left: 5%;
-    text-align: left;
-    width: 50%;
+  
+  details>summary span.icon {
+    width: 24px;
+    height: 24px;
+    transition: all 0.6s;
+    margin-left: auto;
   }
-
-  .project img {
-    width: 90%;
-    padding-bottom: 2%;
+  
+  details[open] summary span.icon {
+    transform: rotate(360deg);
   }
-
-  .project-section{
-    padding-bottom: 2%;
+  
+  summary {
+    color: white;
+    display: flex;
+    cursor: pointer;
+    font-size: 45px;
   }
-
-    /* image hover */
-    .image {
-      opacity: 1;
-      display: block;
-      width: 100%;
-      height: auto;
-      transition: .5s ease;
-      backface-visibility: hidden;
-    }
-    
-    .project:hover .image {
-      opacity: 0.3;
-    }
-
-    .collapsible {
-      cursor: pointer;
-      padding: 18px;
-      width: 100%;
-      border-bottom: #555;
-      text-align: left;
-      outline: none;
-      font-size: 15px;
-    }
-    
-    .active, .collapsible:hover {
-      background-color: #555;
-    }
-    
-    .content {
-      padding: 0 18px;
-      display: none;
-      overflow: hidden;
-    }
+  
+  summary::-webkit-details-marker {
+    display: none;
+  }
