--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,10 @@ html {
 
 
 body{
-  background-color: rgb(169, 169, 169);
+  background: rgb(63,86,59);
+  background: linear-gradient(310deg, rgba(63,86,59,1) 32%, rgb(67, 96, 69) 51%,);
   font-family: "Inter", sans-serif;
+  margin-left: 2%;
 }
 
 h1{
@@ -51,11 +53,6 @@ body p{
     font-size: 18px;
 }
 
-mark{
-  color: white;
-  background-color: rgb(135, 44, 44);
-}
-
 ::-webkit-scrollbar {
   display: none;
 }
@@ -74,13 +71,13 @@ a:visited {
   }
 
 mark {
-  background-color: rgb(105, 105, 105);
+  background-color: var(--clr-2);
+  color: white;
   padding: 5px;
 }
 
 nav {
-  top: 15%;
-  right: 4%;
+  margin-left: -2.5%;
   position: fixed;
   text-align: right;
   z-index: 1;
@@ -93,9 +90,9 @@ nav img{
 li {
   display: block;
   margin: 0px 0px 0px 0px;
-  -webkit-writing-mode: vertical-rl;
-  -ms-writing-mode: tb-rl;
-  writing-mode: vertical-rl;
+  -webkit-writing-mode: vertical-lr;
+  -ms-writing-mode: tb-lr;
+  writing-mode: vertical-lr;
   padding: 30px 0px 0px 0px;
 }
 
