--- a/css/projects.css
+++ b/css/projects.css
@@ -45,8 +45,12 @@
     backface-visibility: hidden;
   }
   
-  .project:hover .image {
+  .project img:hover{
     opacity: 0.5;
+  }
+
+  .project a:hover{
+    text-decoration: underline;
   }
 
   details {
