--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,12 @@ li {
 .contact-icons img {
   height: 30px;
 }
+
+.howtoimage{
+  margin: 50px;
+}
+
+.howtoimage img{
+  text-align: center;
+
+}
